src/plume/api/plume.h

// --------------------------------------------------------------------------------------


/* --- Plume handles --- */
struct plume_protocol_handle_t;
typedef struct plume_protocol_handle_t plume_protocol_handle_t;
struct plume_manager_handle_t;
typedef struct plume_manager_handle_t plume_manager_handle_t;
struct plume_data_handle_t;
typedef struct plume_data_handle_t plume_data_handle_t;
/* --- Plume Manager --- */

/**
 * @brief Create a plume manager handle
 *
 * @param h Handle
 * @return Error code
 */
int plume_manager_create_handle(plume_manager_handle_t** h);
/**
 * @brief Configure the manager with a configuration file
 *
 * @param h Handle
 * @param config_path Path to manager configuration file
 * @return Error code
 */
int plume_manager_configure(plume_manager_handle_t* h, const char* config_path);
/**
 * @brief Configure the manager with a configuration string
 *
 * @param h Handle
 * @param config_string manager configuration string
 * @return Error code
 */
int plume_manager_configure_from_string(plume_manager_handle_t* h, const char* config_string);
/**
 * @brief Load all the plugins
 *
 * @param h Handle
 * @param config_path Path to manager configuration file
 * @param field_catalogue catalogue of available fields
 * @return Error code
 */
int plume_manager_negotiate(plume_manager_handle_t* h, plume_protocol_handle_t* p);
/**
 * @brief Feed data to active plugins
 *
 * @param h Handle
 * @param fdata Handle of data
 * @return Error code
 */
int plume_manager_feed_plugins(plume_manager_handle_t* h, plume_data_handle_t* fdata);
/**
 * @brief Fields requested by all activate plugins
 *
 * @param h Handle
 * @param str_in CSV string of active fields
 * @return Error code
 */
int plume_manager_active_fields(plume_manager_handle_t* h, char** str_in);
/**
 * @brief Fields requested by all activate plugins (as catalogue)
 *
 * @param h Handle
 * @param data_catalogue_ptr Catalogue of data
 * @param active_data_catalogue Catalogue of active data
 * @return Error code
 */
int plume_manager_active_data_catalogue(plume_manager_handle_t* h, void** active_data_catalogue);
/**
 * @brief Checks if a Specific parameter has been requested
 * 
 * @param h 
 * @param name 
 * @param requested 
 * @return int 
 */
int plume_manager_is_param_requested(plume_manager_handle_t* h, const char* name, bool* requested);
/** * @brief Check if a plugin is activated
 *
 * @param h Handle
 * @param name Name of plugin
 * @param activated Pointer to boolean indicating if plugin is activated
 * @return Error code
 */
int plume_manager_is_plugin_activated(plume_manager_handle_t* h, const char* name, bool* activated);
/**
 * @brief Fields requested by the active plugins bound to a specific hook point
 *
 * @param h Handle
 * @param hook Name of the hook point
 * @param derived When false, only the fields that the model is expected to provide are reported
 * @param str_in CSV string of active fields
 * @return Error code
 */
int plume_manager_active_fields_at_hook(plume_manager_handle_t* h, const char* hook, bool derived, char** str_in);
/**
 * @brief Checks if a specific parameter has been requested at a specific hook point
 *
 * @param h Handle
 * @param name Name of parameter
 * @param hook Name of the hook point
 * @param requested Pointer to boolean indicating if the parameter is requested at that hook point
 * @return Error code
 */
int plume_manager_is_param_requested_at_hook(plume_manager_handle_t* h, const char* name, const char* hook,
                                             bool* requested);
/**
 * @brief Check if any active plugin is bound to a hook point
 *
 * @param h Handle
 * @param name Name of the hook point
 * @param active Pointer to boolean indicating if any plugin is bound to the hook point
 * @return Error code
 */
int plume_manager_is_hook_active(plume_manager_handle_t* h, const char* name, bool* active);
/**
 * @brief Hook points registered by the model (always includes the default one)
 *
 * @param h Handle
 * @param str_in CSV string of registered hook points
 * @return Error code
 */
int plume_manager_registered_hooks(plume_manager_handle_t* h, char** str_in);
/**
 * @brief Run all plugins bound to the default hook point
 *
 * @param h Handle
 * @return Error code
 */
int plume_manager_run(plume_manager_handle_t* h);
/**
 * @brief Run the plugins bound to a specific hook point
 *
 * @param h Handle
 * @param hook Name of the hook point
 * @return Error code
 */
int plume_manager_run_hook(plume_manager_handle_t* h, const char* hook);
/**
 * @brief Teardown plugins
 * 
 * @param h 
 * @return int 
 */
int plume_manager_teardown(plume_manager_handle_t* h);
/**
 * @brief Destroy the plume manager handle
 *
 * @param h Handle
 * @return Error code
 */
int plume_manager_delete_handle(plume_manager_handle_t* h);